tech : separating moving and change direction instruction