@@ -1,18 +1,29 @@
-package com.libon.mowersapi.domain;
+package com.libon.mowersapi.domain.mower;
 
 import com.libon.mowersapi.application.restapiadapter.dto.*;
+import com.libon.mowersapi.domain.instruction.DirectionEnum;
+import com.libon.mowersapi.domain.instruction.Instruction;
+import com.libon.mowersapi.domain.instruction.MouvementEnum;
+import com.libon.mowersapi.domain.orientation.OrientationEnum;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 @Service
 public class MowersUpdateUseCase {
+
+    private static final Map<String,Instruction> MAP_STRING_TO_INSTRUCTION
+            = Map.of("A",MouvementEnum.A, "D",DirectionEnum.D,"G",DirectionEnum.G);
+
     public MowersUpdatedDto updateMowers(MowersDetailsDto mowersDetailsDto) {
 
-        MowersDetailsDto details = Optional.ofNullable(mowersDetailsDto).orElse(new MowersDetailsDto(new FieldDto(0, 0), Collections.emptyList()));
+        MowersDetailsDto details = Optional.ofNullable(mowersDetailsDto)
+                .orElse(new MowersDetailsDto(new FieldDto(0, 0), List.of()));
+
         final FieldDto field = details.field();
+
         List<MowerUpdatedDto> mowersUpdated = details.mowers().stream()
                 .map(mower -> this.moveMovers(field,mower))
                 .map(Mower::applyInstructions)
@@ -27,9 +38,10 @@ public class MowersUpdateUseCase {
 
     private Mower moveMovers(FieldDto field, MowerDto mowerDto) {
         PositionDto positionDto = mowerDto.startPosition();
-        List<InstructionEnum> instructions = mowerDto.instructions().stream().map(InstructionEnum::valueOf).toList();
+        List<Instruction> instructions = mowerDto.instructions().stream().map(MAP_STRING_TO_INSTRUCTION::get).toList();
 
         return new Mower(mowerDto.id(), field.maxX(), field.maxX(), positionDto.x(), positionDto.y(),
                 OrientationEnum.valueOf(mowerDto.orientation()),instructions);
     }
+
 }
